manifests/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  labels:
    app: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
      - name: forgejo
        image: codeberg.org/forgejo/forgejo:9
        ports:
        - containerPort: 3000 # HTTP
        - containerPort: 22   # SSH
        volumeMounts:
        - name: forgejo-data
          mountPath: /data
      restartPolicy: Always
      volumes:
      - name: forgejo-data
        persistentVolumeClaim:
          claimName: forgejo-pvc
