manifests/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-service
  labels:
    app: forgejo
spec:
  loadBalancerIP: 192.168.0.57
  selector:
    app: forgejo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
  type: LoadBalancer
