manifests/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
spec:
  rules:
  - host: git.alexbissessur.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo
            port:
              number: 80
