manifests/forgejo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo-service
          port: 22

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-route
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`git.alexbissessur.dev`)
    services:
    - name: forgejo-service
      port: 80
  tls:
    certResolver: le
